# DALLE-CLI

./: flake.nix  pyproject.toml  result
dallecli/: cli.py
